--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -23,3 +23,32 @@
   margin: 0 calc(-1 * var(--ifm-pre-padding));
   padding: 0 var(--ifm-pre-padding);
 }
+
+body{
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1em;
+}
+
+h1,h2,h3,h4,h5,h6{
+  font-family: 'Roboto', sans-serif;
+}
+
+h1{
+  font-size: 2.1rem !important;
+}
+
+h2{
+  font-size: 1.80rem !important;
+}
+
+h3{
+  font-size: 1.75rem !important;
+}
+
+h4{
+  font-size: 1.5rem !important;
+}
+
+h5{
+  font-size: 1.25rem !important;
+}
