--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -68,3 +68,5 @@ h5{
 img[alt=playstore] { height: 4rem }
 img[alt=Credenciales] { display: block; margin: auto; height: 20rem }
 img[alt=Descentralizado] { display: block; margin: auto; }
+img[alt=center] { display: block; margin: auto; }
+
