--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -69,3 +69,4 @@ img[alt=playstore] { height: 4rem }
 img[alt=Credenciales] { display: block; margin: auto; height: 20rem }
 img[alt=Descentralizado] { display: block; margin: auto; }
 img[alt=center] { display: block; margin: auto; }
+img[alt=aidi] { display: block; margin: auto; height: 20rem }
