--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -70,3 +70,4 @@ img[alt=Credenciales] { display: block; margin: auto; height: 20rem }
 img[alt=Descentralizado] { display: block; margin: auto; }
 img[alt=center] { display: block; margin: auto; }
 img[alt=aidi] { display: block; margin: auto; height: 20rem }
+img[alt=ronda] { display: block; margin: auto; height: 20rem }
